--- a/src/pages/post/postStyles.css
+++ b/src/pages/post/postStyles.css
@@ -12,7 +12,7 @@
     }
 
     h2, h3, h4, h5, h6 {
-        @apply font-bold
+        @apply pt-3
     }
 
     figure {
@@ -29,6 +29,26 @@
 
     a {
         @apply underline
+    }
+
+    code {
+        @apply bg-[#282C34] px-1 rounded text-white text-lg
+    }
+
+    pre {
+        @apply bg-[#282C34] rounded text-white text-lg w-full p-4
+    }
+
+    pre code {
+        @apply bg-transparent
+    }
+
+    ol {
+        @apply list-disc px-6
+    }
+
+    li {
+        @apply list-outside
     }
 
 }
